# youtube_2_whisper

./: .gitignore  PARAMETERS_DOCUMENTATION.md  PARAMETERS_DOCUMENTATION_EN.md  PARAMETERS_DOCUMENTATION_RU.md  README.md  README_RU.md  pyproject.toml
src/: config.py  main.py  models.py  processor.py  utils.py  whisper_client.py  youtube_downloader.py
src/youtube_2_whisper/: config.py  main.py  models.py  processor.py  utils.py  whisper_client.py  youtube_downloader.py
